Reestructura y arreglo de traducciones alfred-108 --skip-ci

--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,6 +1,6 @@
 <table>
   <tr><td>--<%= t('category') %>--</td></tr>
-  <tr><td><%=t('cat_name')%>: <%= category.name %></td></tr>
-  <tr><td><%=t('cat_icon')%>: <%= category.icon %></td></tr>
-  <tr><td><%=t('cat_created')%>: <%= category.created_at%></td></tr>
+  <tr><td><%=t('categories.name')%>: <%= category.name %></td></tr>
+  <tr><td><%=t('categories.icon')%>: <%= category.icon %></td></tr>
+  <tr><td><%=t('categories.created')%>: <%= category.created_at%></td></tr>
 </table>
