--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -8,9 +8,9 @@
           <thead>
           <tr>
             <td></td>
-            <td><%= t('cat_name') %></td>
-            <td><%= t('cat_created') %></td>
-            <td><%= t('cat_updated') %></td>
+            <td><%= t('categories.name') %></td>
+            <td><%= t('categories.created') %></td>
+            <td><%= t('categories.updated') %></td>
           </tr>
           </thead>
           <tbody>
