--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,16 +4,16 @@
 </p>
 
 <p>
-  <strong><%= t('cat_icon') %>:</strong>
+  <strong><%= t('categories.icon') %>:</strong>
   <%= @category.icon %>
 </p>
 
 <p>
-  <strong><%= t('cat_created') %>:</strong>
+  <strong><%= t('categories.created') %>:</strong>
   <%= @category.created_at %>
 </p>
 <p>
-  <strong><%= t('cat_updated') %>:</strong>
+  <strong><%= t('categories.updated') %>:</strong>
   <%= @category.updated_at %>
 </p>
 
