--- a/app/views/milestones/_info.html.erb
+++ b/app/views/milestones/_info.html.erb
@@ -25,7 +25,7 @@
 
     <div class="">
       <table>
-        <tr><td><%=t('mil_assigned_to')%>:</td></tr>
+        <tr><td><%=t('milestones.assigned_to')%>:</td></tr>
       <%@milestone.people.each do |p| %>
            <tr><td>
              <%= p.name %>
