--- a/app/views/people/_timeline_card.erb
+++ b/app/views/people/_timeline_card.erb
@@ -91,7 +91,7 @@
         <% end %>
       </ul>
   <% else %>
-          <p>No hay hitos que mostar</p>
+          <p><% t('milestones.zero') %></p>
   <% end %>
 
 
