--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -3,16 +3,16 @@
     <div class="col-xs-12">
 
       <div class="table-container">
-        <h1><%= t('project_index_header') %></h1>
+        <h1><%= t('project.index.header') %></h1>
         <table class="table datatable">
           <thead>
           <tr>
             <td></td>
 
-            <td><%= t('project_name') %></td>
-            <td><%= t('project_client') %></td>
-            <td><%= t('project_start_date') %></td>
-            <td><%= t('project_end_date') %></td>
+            <td><%= t('project.name') %></td>
+            <td><%= t('project.client') %></td>
+            <td><%= t('project.start_date') %></td>
+            <td><%= t('project.end_date') %></td>
             <td></td>
             <td></td>
           </tr>
@@ -31,7 +31,7 @@
                 </td>
                 <td><%= link_to project_path(m),
                                 method: :delete,
-                                data: { confirm: t('sure?') } do %>
+                                data: { confirm: t('project.delete.sure') } do %>
                       <span class='large-text glyphicon glyphicon-remove'></span>
                   <% end %>
                 </td>
@@ -49,12 +49,12 @@
 
 
 <!--VERSION VIEJA-->
-<!--<h1><%= t('project_index_header') %></h1>-->
+<!--<h1><%= t('project.index.header') %></h1>-->
 <!--<table class="table">-->
   <!--<tr>-->
-    <!--<th><%= t('project_id') %></th>-->
-    <!--<th><%= t('project_name') %> </th>-->
-    <!--<th><%= t('project_client') %></th>-->
+    <!--<th><%= t('project.id') %></th>-->
+    <!--<th><%= t('project.name') %> </th>-->
+    <!--<th><%= t('project.client') %></th>-->
   <!--</tr>-->
   <!--<% projects = Project.where(validity: 'true') %>-->
   <!--<% projects.each do |p| %>-->
@@ -78,5 +78,5 @@
   <!--<% end %>-->
 <!--</table>-->
 <!--<% if projects.size == 0 %>-->
-<!--<em><%= t('project_no_projects') %></em>-->
+<!--<em><%= t('project.zero') %></em>-->
 <!--<% end %>-->
