--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,16 +1,16 @@
 <div class="container">
   <div class="row">
     <div class="card-col col-xs-4 col-xs-offset-4">
-    <h1><span class="glyphicon glyphicon-list"></span> <%= t('cat_create') %></h1>
+    <h1><span class="glyphicon glyphicon-list"></span> <%= t('categories.new.header') %></h1>
 
     <%= form_for([@category]) do |c| %>
         <div class="form-group">
-          <%= c.label t('cat_name'), class: "control-label" %>
+          <%= c.label t('categories.name'), class: "control-label" %>
           <%= c.text_field :name, class: "form-control", 'data-validation':"required" %>
         </div>
 
         <div class="form-group">
-          <%= c.label t('cat_icon'), class: "control-label" %>
+          <%= c.label t('categories.icon'), class: "control-label" %>
           <%= c.text_field :icon, class: "form-control" %>
         </div>
 
@@ -18,7 +18,7 @@
         <%= c.hidden_field(:created_at, :value =>Time.now) %>
         <%= c.hidden_field(:updated_at, :value =>Time.now) %>
 
-        <%= c.button t('cat_create'), :type => 'submit', class: "btn btn-default" %>
+        <%= c.button t('categories.new.submit'), :type => 'submit', class: "btn btn-default" %>
      </div>
     <% end %>
   </div>
