--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -43,7 +43,7 @@
             <form id="nav-search-form" class="navbar-form navbar-right search" role="search">
                 <button type="submit" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-search"></span></button>
                 <div class="form-group">
-                    <input type="text" id="nav-search"  class="form-control" placeholder="Search" autocomplete="off">
+                    <input type="text" id="nav-search"  class="form-control" placeholder="<%= t('search') %>" autocomplete="off">
                 </div>
             </form>
 
