--- a/app/views/milestones/_form.html.erb
+++ b/app/views/milestones/_form.html.erb
@@ -1,22 +1,22 @@
 
 
 <%= form_for [@person, @person.milestones.build], html: { class:'timeline-form main-form slide-on-click clearfix','data-toggle': 'validator'}  do |m| %>
-    <h1 class=""><span class="glyphicon glyphicon-check"></span> <%= t('mil_create') %></h1>
+    <h1 class=""><span class="glyphicon glyphicon-check"></span> <%= t('milestones.new.header') %></h1>
     <div class="form-slide">
         <div class="form-group">
-          <%= m.label t('mil_title'), class: "control-label" %>
+          <%= m.label t('milestones.title'), class: "control-label" %>
           <%= m.text_field :title, class: "form-control", 'data-validation':"required" %>
         </div>
 
         <div class="form-group">
-          <%= m.label t('mil_description'), class: "control-label" %>
+          <%= m.label t('milestones.description'), class: "control-label" %>
           <%= m.text_field :description, class: "form-control", 'data-validation':"required" %>
         </div>
 
 
         <div class="row">
           <div class="form-group col-xs-6">
-            <%= m.label t('mil_status'), class: "control-label" %>
+            <%= m.label t('milestones.status'), class: "control-label" %>
             <%= m.text_field :status, class: "form-control", 'data-validation': "status" %>
             <%= t('values')+': rejected, pending, done' %>
           </div>
@@ -24,13 +24,13 @@
 
 
           <div class="form-group col-xs-6">
-            <%=  m.label t('mil_icon'), class: "control-label" %>
+            <%=  m.label t('milestones.icon'), class: "control-label" %>
             <%=  m.text_area :icon, class: "form-control" %>
           </div>
         </div>
         <div> <%=t('category')%>
           <tr><td><select name="category_id">
-            <option value=<%=nil%> > Ninguna </option>
+            <option value=<%=nil%> ><%= t('none') %></option>
             <% Category.all.each do |ca| %>
               <option value=<%=ca.id%> > <%=ca.name%></option>
             <% end %>
@@ -40,7 +40,7 @@
         <div class="row">
 
           <div class="form-group col-xs-6">
-            <%= m.label t('mil_start_date'), class: "control-label" %>
+            <%= m.label t('milestones.start_date'), class: "control-label" %>
             <div class="input-group">
               <%= m.text_field :start_date, class: "form-control", "data-provide":"datepicker", 'data-validation-format': "dd/mm/yyyy"%>
               <div class="input-group-addon"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></div>
@@ -48,7 +48,7 @@
           </div>
 
           <div class="form-group col-xs-6">
-            <%= m.label t('mil_due_date'), class: "control-label" %>
+            <%= m.label t('milestones.due_date'), class: "control-label" %>
             <div class="input-group">
               <%= m.text_field :due_date, class: "form-control", "data-provide":"datepicker", 'data-validation-format': "dd/mm/yyyy"%>
               <div class="input-group-addon"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></div>
@@ -61,13 +61,13 @@
           <div class="form-group col-xs-12">
             <%= m.label 'Tags', class: "control-label" %>
 
-            <%= select_tag(:tags, options_from_collection_for_select(@tags, :id, :name), :multiple => true, class: "chzn-select", 'data-placeholder'=> t('select_tags'), 'style'=> 'width:100%') %>
+            <%= select_tag(:tags, options_from_collection_for_select(@tags, :id, :name), :multiple => true, class: "chzn-select", 'data-placeholder'=> t('milestones.select_tags'), 'style'=> 'width:100%') %>
 
           </div>
           <div class="form-group col-xs-12">
-            <%= m.label t('assign_to'), class: "control-label" %>:<br>
-            (<%= @person.name+t('mil_assigned') %>)
-            <%= select_tag(:people, options_from_collection_for_select(@people, :id, :name), :multiple => true, class: "chzn-select", 'data-placeholder'=> t('select_people'), 'style'=> 'width:100%') %>
+            <%= m.label t('milestones.assign_to'), class: "control-label" %>:<br>
+            (<%= @person.name+t('milestones.assigned') %>)
+            <%= select_tag(:people, options_from_collection_for_select(@people, :id, :name), :multiple => true, class: "chzn-select", 'data-placeholder'=> t('milestones.select_people'), 'style'=> 'width:100%') %>
 
           </div>
 
@@ -75,7 +75,7 @@
 
         <%= m.hidden_field(:created_at, :value=>Time.now) %>
         <%= m.hidden_field(:updated_at, :value=>Time.now) %>
-        <%= m.button t('mil_create'), :type => 'submit', class: "btn btn-default" %>
+        <%= m.button t('milestones.add.submit'), :type => 'submit', class: "btn btn-default" %>
     </div>
 <% end %>
 <script> $(".chzn-select").chosen();</script>
