--- a/app/views/people/_events_card.erb
+++ b/app/views/people/_events_card.erb
@@ -1,5 +1,5 @@
 <div id="events-card" class="card events">
-  <h1>Eventos</h1>
+  <h1><%= t('events') %></h1>
   <!--<div class="separator"><div>Esta semana</div></div>
   <ul>
     <li class="clearfix">
@@ -59,6 +59,6 @@
           </ul>
       <% end %>
   <% else %>
-    <p>No hay hitos que mostar</p>
+    <p><%= t('milestones.zero') %></p>
   <% end %>
 </div>
