--- a/app/views/people/_profile_card.erb
+++ b/app/views/people/_profile_card.erb
@@ -12,9 +12,9 @@
     <% end %>
   </ul>
   <hr>
-  <h4>MENTORES</h4>
+  <h4><%= t('mentor.header') %></h4>
     <% if @mentorships.empty? %>
-        <p>Sin mentores en la actualidad</p>
+        <p><%= t('mentor.zero') %></p>
     <%else%>
         <% @mentorships.each do |s| %>
             <li><%= s.name %></li>
@@ -22,6 +22,6 @@
         <br>
     <%end%>
     <%if current_user_admin? %>
-        <a href="add_mentor_form?mentee_id=<%=@identifier%>" class="btn btn-info" role="button"><span class="glyphicon glyphicon-add"></span>Agregar Mentores</a>
+        <a href="add_mentor_form?mentee_id=<%=@identifier%>" class="btn btn-info" role="button"><span class="glyphicon glyphicon-add"></span><%= t('mentor.add.header') %></a>
     <%end%>
 </div>
