--- a/app/views/people/_stats_card.erb
+++ b/app/views/people/_stats_card.erb
@@ -18,10 +18,10 @@
     <div class="clearfix"></div>
   </div>-->
 
-  <h1>Estadísticas</h1>
+  <h1><%= t('stats') %></h1>
   <div class="badge-stats">
-    <span>Proyectos en curso</span><span class="badge"><%=@proysin%></span><br>
-    <span>Proyectos realizados</span><span class="badge"><%=@proysend%></span><br>
-    <span>Tiempo en Moove-it</span><span class="badge"><%= time_ago_in_words(@start_date) %></span>
+    <span><%= t('project.ongoing') %></span><span class="badge"><%=@proysin%></span><br>
+    <span><%= t('project.fulfilled') %></span><span class="badge"><%=@proysend%></span><br>
+    <span><%= t('moove-it-time') %></span><span class="badge"><%= time_ago_in_words(@start_date) %></span>
   </div>
 </div>
