mis cambios en ms/edit y controller --skip-ci

--- a/app/views/milestones/_info.html.erb
+++ b/app/views/milestones/_info.html.erb
@@ -18,7 +18,7 @@
 
     <p><%= @milestone.description %></p>
     <p><%=
-        if @milestone.feedback? and @milestone.feedback_author
+        if feedback? and @milestone.feedback_author
           @milestone.feedback_author.name
         end
     %></p>
