--- a/app/views/milestones/edit.html.erb
+++ b/app/views/milestones/edit.html.erb
@@ -11,16 +11,21 @@
           </div>
 
           <div class="form-group">
-            <%= f.label t('description'), class: "control-label" %>
+            <%= f.label t('mil_description'), class: "control-label" %>
             <%= f.text_field :description, class: "form-control", 'data-validation': "required" %>
           </div>
 
           <div class="form-group">
-            <% if @milestone.feedback? %>
+            <%= f.label t('milestone_category')%>
+            <br>
+            <%= f.select :category_id, Category.all.collect {|t| [t.name, t.id]}, {}, {:multiple => false, :class => "chzn-select category", 'style'=> 'width:100%'} %>
+          </div>
+
+          <div class="form-group feedback_autor" <% if !feedback? then style='display: none;' end%>>
+
               <%= f.label t('milestone_reviewer')%>
               <br>
-              <%= f.select :feedback_author, Person.all.collect {|t| [t.name, t.id]}, {}, {:multiple => false, :class => "input-lg"} %>
-            <% end %>
+              <%= f.select :feedback_author_id, Person.all.collect {|t| [t.name, t.id]}, {}, {:include_blank => true, :multiple => false, :class => "chzn-select select_author", 'style'=> 'width:100%'} %>
           </div>
 
           <div class="form-group">
@@ -41,16 +46,16 @@
 
         <div class="row">
             <div class="form-group col-xs-6">
-              <%= f.label t('milestone_due_date'), class: "control-label" %>
+              <%= f.label t('mil_due_date'), class: "control-label" %>
               <div class="input-group">
-                <%= f.text_field :due_date, class: "form-control", "data-provide":"datepicker", 'data-validation-format': "dd/mm/yyyy" %>
+                <%= f.text_field :due_date, class: "form-control", 'value':l(@milestone.due_date), "data-provide":"datepicker", 'data-validation-format': "dd/mm/yyyy" %>
                 <div class="input-group-addon"><span class="glyphicon glyphicon-th" aria-hidden="true"></span></div>
               </div>
             </div>
           </div>
 
           <div class="btn">
-            <%= f.button t('milestone_edit_submit'),:type => 'submit', class: "btn btn-default" %>
+            <%= f.button t(:save), options= :type => 'submit', class: "btn btn-default" %>
           </div>
       <% end %>
 
@@ -58,4 +63,18 @@
   </div>
 </div>
 
-<script> $(".chzn-select").chosen();</script>
+<script>
+    $(".chzn-select").chosen();
+</script>
+<script>
+    $('.category').change( function() {
+    var selectedValue = $(this).find('option:selected').text();
+        if (selectedValue=='Feedback'){
+            $('.feedback_autor').show('slow');
+        }
+        else {
+            $('.feedback_autor').hide('slow');
+            $('.select_author').val('').trigger("select_author:updated");
+        }
+    });
+</script>
