Reestructura y arreglo de traducciones alfred-108 reloaded

--- a/app/views/milestones/_form.html.erb
+++ b/app/views/milestones/_form.html.erb
@@ -64,7 +64,7 @@
             <%else%>
             <%= m.label t('milestones.assign_to'), class: "control-label" %>:<br>
             (<%= @person.name+t('milestones.assigned') %>)
-            <%= select_tag(:people, options_from_collection_for_select(@people, :id, :name), :multiple => true, class: "chzn-select", 'data-placeholder'=> t('select_people'), 'style'=> 'width:100%') %>
+            <%= select_tag(:people, options_from_collection_for_select(@people, :id, :name), :multiple => true, class: "chzn-select", 'data-placeholder'=> t('milestones.select_people'), 'style'=> 'width:100%') %>
             <%end%>
           </div>
         </div>
