--- a/app/views/milestones/show.html.erb
+++ b/app/views/milestones/show.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <%= render 'info' %>
     </div>
-    <h3><%= t('mil_notes') %></h3>
+    <h3><%= t('notes.header') %></h3>
     <hr>
     <div class="row">
       <div id="milestone-notes">
