--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -3,7 +3,7 @@
     <div class="col-xs-12">
 
       <div class="table-container">
-        <h1><%= t('categories') %></h1>
+        <h1><%= t('categories.header') %></h1>
         <table class="table">
           <thead>
           <tr>
