--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -4,7 +4,7 @@
 
       <div class="table-container">
         <h1><%= t('project.index.header') %></h1>
-        <table class="table datatable">
+        <table class="table datatable" data-info="false">
           <thead>
           <tr>
             <td></td>
