alfred 112 y 113 sin test

--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -51,6 +51,10 @@
     min-height: 40em;
   }
 
+    &.card.nonpending {
+        color: black;
+        min-height: 1em;
+    }
 }
 
 #profile-card {
