Resultos problemas varios en notas y milestones

--- a/app/views/people/_timeline_card.erb
+++ b/app/views/people/_timeline_card.erb
@@ -48,8 +48,7 @@
     </div>
 
 <% else %>
-    <div class="alert alert-info" role="alert"><p><% t('milestones.zero') %></p></div>
-
+    <div class="alert alert-info" role="alert"><p><%= t('milestones.zero') %></p></div>
 <% end %>
 
 
