--- a/app/views/milestones/edit.html.erb
+++ b/app/views/milestones/edit.html.erb
@@ -25,7 +25,7 @@
           <div class="form-group feedback_autor">
               <%=  f.label t('milestones.reviewer')%>
               <br>
-              <%= f.select :feedback_author_id, @authors, {:include_blank=>true}, {:include_blank => true, :multiple => false, :class => "chzn-select select_author", 'data-placeholder'=> t('select_people'), 'style'=> 'width:100%'} %>
+              <%= f.select :feedback_author_id, @authors, {:include_blank=>true}, {:include_blank => true, :multiple => false, :class => "chzn-select select_author", 'data-placeholder'=> t('milestones.add_feedback_author'), 'style'=> 'width:100%'} %>
           </div>
 
           <div class="form-group">
@@ -83,6 +83,10 @@
 
 <script>
     $(".chzn-select").chosen();
+    if ($('.category').val()!=2) {
+        $('.feedback_autor').hide();
+    }
+
 </script>
 <script>
     $('.category').change( function() {
