--- a/app/views/milestones/show.html.erb
+++ b/app/views/milestones/show.html.erb
@@ -16,7 +16,7 @@
                 <p><%= n.text %></p>
                 <%= link_to [n.milestone, n],
                             method: :delete,
-                            data: { confirm: t('milestone.delete.sure')},
+                            data: { confirm: t('notes.delete.sure')},
                             class: 'delete' do %>
                     <span class="glyphicon glyphicon-remove"></span>
 
