--- a/app/views/milestones/edit.html.erb
+++ b/app/views/milestones/edit.html.erb
@@ -141,13 +141,14 @@
       var due_day= parts[0];
       var due_date=new Date(due_year, due_month, due_day,23,59,59);
       var start=document.getElementById('start_date').value;
+      alert(start);
       var parts= start.split('/');
       var start_year= parts[2];
       var start_month= parts[1]-1;
       var start_day= parts[0];
       var start_date=new Date(start_year, start_month, start_day,23,59,59);
       var date=new Date();
-      return due_date>=date && start_date<due_date;
+      return due_date>=date && (start=='' || start_date<due_date);
     },
     errorMessage : '',
     errorMessageKey: 'badDueDate'
