--- a/app/views/milestones/edit.html.erb
+++ b/app/views/milestones/edit.html.erb
@@ -19,13 +19,13 @@
           <div class="form-group">
             <%= f.label t('category')%>
             <br>
-            <%= f.select :category_id, @cats, {:include_blank=>false}, {:multiple => false, :class => "chzn-select category", 'style'=> 'width:100%'} %>
+            <%= f.select :category_id, @cats, {}, {:multiple => false, :class => "chzn-select category", 'style'=> 'width:100%'} %>
           </div>
 
           <div class="form-group feedback_autor">
               <%=  f.label t('milestones.reviewer')%>
               <br>
-              <%= f.select :feedback_author_id, @authors, {:include_blank=>true}, {:include_blank => true, :multiple => false, :class => "chzn-select select_author", 'data-placeholder'=> t('milestones.add_feedback_author'), 'style'=> 'width:100%'} %>
+              <%= f.select :feedback_author_id, @authors, {}, {:include_blank => true, :multiple => false, :class => "chzn-select select_author", 'data-placeholder'=> t('milestones.add_feedback_author'), 'style'=> 'width:100%'} %>
           </div>
 
           <div class="form-group">
@@ -141,7 +141,6 @@
       var due_day= parts[0];
       var due_date=new Date(due_year, due_month, due_day,23,59,59);
       var start=document.getElementById('start_date').value;
-      alert(start);
       var parts= start.split('/');
       var start_year= parts[2];
       var start_month= parts[1]-1;
