--- a/app/views/milestones/show.html.erb
+++ b/app/views/milestones/show.html.erb
@@ -14,12 +14,13 @@
                 <h2><%= n.author.name %></h2>
                 <div class="time">hace <%= time_ago_in_words(n.created_at) %></div>
                 <p><%= n.text %></p>
+                <% if current_user_admin? %>
                 <%= link_to [n.milestone, n],
                             method: :delete,
                             data: { confirm: t('notes.delete.sure')},
                             class: 'delete' do %>
                     <span class="glyphicon glyphicon-remove"></span>
-
+                    <% end %>
                 <% end %>
                 <% if n.visibility=='every_body' %>
                     <span class="glyphicon glyphicon-eye-open"></span>
