--- a/app/views/milestones/_form.html.erb
+++ b/app/views/milestones/_form.html.erb
@@ -31,7 +31,7 @@
         <div class="form-group feedback_autor">
           <%=  m.label t('milestones.reviewer')%>
           <br>
-          <%= m.select :feedback_author_id, @authors, {}, {:multiple => false, :class => "chzn-select select_author",'data-placeholder'=> t('select_people'), 'style'=> 'width:100%'} %>
+          <%= m.select :feedback_author_id, @authors, {:include_blank => true}, {:multiple => false, :class => "chzn-select select_author", 'data-placeholder'=> t('milestones.add_feedback_author'), 'style'=> 'width:100%'} %>
         </div>
 
         <div class="row">
@@ -73,13 +73,19 @@
         </div>
       <%= m.hidden_field(:created_at, :value=>Time.now) %>
       <%= m.hidden_field(:updated_at, :value=>Time.now) %>
-      <%= m.button t('milestones.add.submit'), :type => 'submit', class: "btn btn-default" %>
+      <%= m.button t('milestones.new.submit'), :type => 'submit', class: "btn btn-default" %>
 
     </div>
 
 <% end %>
 
-<script> $(".chzn-select").chosen();</script>
+<script> $(".chzn-select").chosen();
+    if ($('.category').find('option:selected').text()!='Feedback') {
+        $('.feedback_autor').hide();
+    }else {
+        $('.feedback_autor').show();
+    }
+</script>
 <script>
   // Add custom validation rule
   $.formUtils.addValidator({
@@ -134,13 +140,13 @@
 
 <script>
   $('.category').change( function() {
-    var selectedValue = $(this).find('option:selected').val();
-    if (selectedValue==2){
+    var selectedValue = $(this).find('option:selected').text();
+    if (selectedValue=='Feedback'){
       $('.feedback_autor').show('slow');
-    }
-    if (selectedValue!=2){
+    }else{
+
       $('.feedback_autor').hide('slow');
-      $('.select_author').val(' ').trigger("select_author:updated");
+      $('.select_author').val('').trigger("select_author:updated");
     }
   });
 
