--- a/app/views/milestones/edit.html.erb
+++ b/app/views/milestones/edit.html.erb
@@ -25,7 +25,7 @@
           <div class="form-group feedback_autor">
               <%=  f.label t('milestones.reviewer')%>
               <br>
-              <%= f.select :feedback_author_id, @authors, {}, {:include_blank => true, :multiple => false, :class => "chzn-select select_author", 'data-placeholder'=> t('milestones.add_feedback_author'), 'style'=> 'width:100%'} %>
+              <%= f.select :feedback_author_id, @authors, {include_blank: true}, {:multiple => false , :class => "chzn-select select_author", 'data-placeholder'=> t('milestones.add_feedback_author'), 'style'=> 'width:100%'} %>
           </div>
 
           <div class="form-group">
@@ -83,8 +83,10 @@
 
 <script>
     $(".chzn-select").chosen();
-    if ($('.category').val()!=2) {
+    if ($('.category').find('option:selected').text()!='Feedback') {
         $('.feedback_autor').hide();
+    }else{
+        $('.feedback_autor').show();
     }
 
 </script>
@@ -99,9 +101,6 @@
             $('.select_author').val('').trigger("select_author:updated");
         }
     });
-    $().ready(function(){
-        $('.category').trigger('change');
-    })
 </script>
 
 <script>
