--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -38,7 +38,7 @@
           <%= render 'milestones/form' %>
         <%end%>
       <div id="npmillink-card" class="card nonpending">
-        <h1><%=link_to "(#{@nonpendingmilestonescount}) #{t('milestones.done_or_rejected')}", person_showallmilestones_path(:person_id => @person.id), class: "card nonpending" %></h1>
+        <h1><%=link_to "#{t('milestones.done_or_rejected')} (#{@nonpendingmilestonescount})", person_showallmilestones_path(:person_id => @person.id), class: "card nonpending" %></h1>
       </div>
       <%= render 'people/timeline_card' %>
     </div>
