Implementacion de alfred-121

--- a/app/views/people/_timeline_card.erb
+++ b/app/views/people/_timeline_card.erb
@@ -41,6 +41,10 @@
               <ul class="tags">
                 <!--<li>Speaker</li>-->
               </ul>
+
+              <!-- Muestro ultima nota -->
+              <%= print_note(e.notes.last) %>
+
               <div class="clearfix"></div>
             </li>
         <% end %>
