--- a/app/assets/stylesheets/_milestones.scss.erb
+++ b/app/assets/stylesheets/_milestones.scss.erb
@@ -72,6 +72,9 @@
     padding-bottom: 0;
 
     form {
+
+        padding-bottom: 20px;
+
         input {
             width: calc(100% - 50px);
         }
@@ -84,7 +87,7 @@
 
         list-style: none;
         padding: 0;
-        margin: 15px -20px 0 -20px;
+        margin: 0 -20px;
 
         li {
 
@@ -119,15 +122,58 @@
                 padding: 10px 0 10px 10px;
             }
 
-            a.delete {
+            .options {
                 position: absolute;
                 top: 10px;
                 right: 10px;
+                > div {
+                    display: block;
+                }
             }
         }
     }
 }
 
+ul#milestone-asignees {
+    list-style: none;
+    padding: 0;
+    li {
+        float: left;
+        width: calc(33.333% - 30px);
+        margin: 15px;
+        background-color: $body-background;
+        padding: 10px 15px;
+
+        img {
+            border-radius: 50%;
+            height: 50px;
+            display: block;
+            float: left;
+        }
+
+        .info {
+            float: left;
+            margin-left: 15px;
+            vertical-align: middle;
+        }
+
+        h2 {
+            text-align: right;
+            font-weight: bold;
+            font-size: 12px;
+            margin: 0;
+            display: inline-block;
+        }
+
+        h3 {
+            margin: 0;
+            text-align: right;
+            font-size: 10px;
+            color: #3497DA;
+            display: inline-block;
+        }
+    }
+}
 
 /*.etiquetas{
     margin:0;
