--- a/app/views/milestones/_info.html.erb
+++ b/app/views/milestones/_info.html.erb
@@ -1,5 +1,4 @@
 <div id="milestone-info">
-  <% store_return_to %>
   <%= if @milestone.status != 'rejected'
         milestone_status(@milestone)
       end %>
@@ -21,25 +20,17 @@
           @milestone.feedback_author.name
         end
     %></p>
-    <div class="">
-      <table>
-        <tr><td><%=t('milestones.assigned_to')%>:</td></tr>
-      <%@milestone.people.each do |p| %>
-           <tr><td>
-             <%= p.name %>
-           </td></tr>
-        <%end%>
-      </table>
-    </div>
 
+    <% if @milestone.start_date %>
     <div class="calendar right">
-      <% if @milestone.start_date %>
-          <%= l(@milestone.start_date, format: "%A, %B %d %Y").capitalize %><br>
-      <% end %>
-      <% if @milestone.due_date %>
-          <%= l(@milestone.due_date, format: "%A, %B %d %Y").capitalize %>
-      <% end %>
+          <%= l(@milestone.start_date, format: "%A, %B %d %Y").capitalize %>
     </div>
+    <% end %>
+    <% if @milestone.due_date %>
+      <div class="calendar">
+        <%= l(@milestone.due_date, format: "%A, %B %d %Y").capitalize %>
+      </div>
+    <% end %>
 
     <% unless @milestone.tags.empty? %>
         <ul class="tags clearfix">
@@ -50,3 +41,15 @@
     <%end%>
   </div>
 </div>
+
+<ul id="milestone-asignees">
+  <%@milestone.people.each do |p| %>
+      <li>
+        <%= person_picture @image_id %>
+        <div class="info">
+          <h2><%= p.name %></h2>
+          <h3><%= "HOLA" || p.tech_role %></h3>
+        </div>
+      </li>
+  <%end%>
+</ul>
