--- a/app/views/people/_timeline_card.erb
+++ b/app/views/people/_timeline_card.erb
@@ -42,10 +42,33 @@
               </ul>
 
               <!-- Muestro ultima nota -->
-              <%= print_note(e.notes.last) %>
+              <%= n = e.notes.last %>
+              <% unless n.nil? %>
+                <li class="clearfix">
+                <h2><%= n.author.name %></h2>
+                <div class="time">hace <%= time_ago_in_words(n.created_at) %></div>
+                <p><%= n.text %></p>
+                <% if current_user_admin?
+                     link_to [n.milestone, n],
+                             method: :delete,
+                             data: { confirm: t('notes.delete.sure')},
+                             class: 'delete' do %>
+                        <span class="glyphicon glyphicon-remove"></span>
+                    <% end
+                       end
+                       if n.visibility=='every_body' %>
+                    <span class="glyphicon glyphicon-eye-open"></span>
+                <% else if n.visibility=='mentors' %>
+                        <span class="glyphicon glyphicon-eye-close"></span>
+                    <% else %>
+                        <span class="glyphicon glyphicon-lock"></span>
+                    <% end
+                end %>
+                </li>
 
-              <div class="clearfix"></div>
-            </li>
+                <div class="clearfix"></div>
+                </li>
+              <% end %>
         <% end %>
       </ul>
     </div>
