--- a/app/assets/stylesheets/_login.scss.erb
+++ b/app/assets/stylesheets/_login.scss.erb
@@ -67,7 +67,7 @@ a {
     border: 1px solid #F67B28;
     font-size: 16px;
     font-weight: bold;
-    background-image: image-url('layouts/Google-Logo.png');
+    background-image: image-url('layouts/new-logo.png');
     background-repeat: no-repeat;
     background-position: 10px 50%;
     background-size: 24px;
