--- a/app/views/people/showallmilestones.html.erb
+++ b/app/views/people/showallmilestones.html.erb
@@ -9,7 +9,57 @@
       <div id="npmillink-card" class="card nonpending">
         <h1><%= t('milestones.done_or_rejected') %> &nbsp;&nbsp;&nbsp;&nbsp; <%=link_to :back, person_path(@people) , class: "btn btn-info" %></h1>
       </div>
-      <%= render 'people/timeline_card' %>
+      
+      <% if @milestones and not @milestones.empty? %>
+          <div id="timeline-card" class="card timeline">
+            <ul id="milestone-list">
+              <% @milestones.each do |e| %>
+                  <li>
+                    <%= if e.status != 'rejected'
+                          milestone_status(e,:right)
+                        end %>
+                    <%= milestone_status_rej(e, :right) %>
+                    <h2><strike><%=link_to e.title, e, method: :get%></strike></h2>
+                    <p><%=t(e.description) %></p>
+
+                    <div class="resources-list clearfix">
+                      <h2><%=t(:attachmentsdocs)%></h2>
+                      <% if e.resources.empty? && can_modify_milestone?(e.id) %>
+                          <%=link_to :controller => 'google', :action => 'adddriveview', :milestone_id => e.id do%>
+                              <span class="toggle-documents glyphicon glyphicon-plus"></span>
+                          <% end %>
+                      <% else %>
+                          <span class="toggle-documents glyphicon glyphicon-chevron-down"></span>
+                          <ul>
+                            <%e.resources.each do |r|%>
+                                <li><%=link_to r.title, r.url, :target => "_blank"%></li>
+                            <%end%>
+                            <% if can_modify_milestone?(e.id) %>
+                                <%=link_to :controller => 'google', :action => 'adddriveview', :milestone_id => e.id do%>
+                                    <span class="toggle-documents glyphicon glyphicon-plus"></span>
+                                <% end %>
+                            <% end %>
+                          </ul>
+                      <% end %>
+
+                    </div>
+
+                    <% if e.due_date %>
+                        <div class="calendar"><%=l(e.due_date, format: "%A, %B %d %Y")%></div>
+                    <% end %>
+                    <ul class="tags">
+                      <!--<li>Speaker</li>-->
+                    </ul>
+                    <div class="clearfix"></div>
+                  </li>
+              <% end %>
+            </ul>
+          </div>
+
+      <% else %>
+          <div class="alert alert-info" role="alert"><p><%= t('milestones.zero') %></p></div>
+      <% end %>
+
     </div>
   </div>
 </div>
