boton add en listados tags y proyectos

--- a/app/assets/stylesheets/_tables.scss.erb
+++ b/app/assets/stylesheets/_tables.scss.erb
@@ -16,7 +16,9 @@
         font-size: 16px;
         font-weight: bold;
     }
-
+    .table-add-button{
+        color: whitesmoke;
+    }
     .datatable {
         thead td {
 
