--- a/app/views/people/_timeline_card.erb
+++ b/app/views/people/_timeline_card.erb
@@ -13,7 +13,7 @@
               <p><%=t(e.description) %></p>
 
               <div class="resources-list clearfix">
-                <h2><%=t(:attachmentsdocs)%></h2>
+                <h2><span class="glyphicon glyphicon glyphicon-paperclip"></span>  <%=t(:attachmentsdocs)%></h2>
                 <% if e.resources.empty? && can_modify_milestone?(e.id) %>
                     <%=link_to :controller => 'google', :action => 'adddriveview', :milestone_id => e.id do%>
                         <span class="toggle-documents glyphicon glyphicon-plus"></span>
@@ -42,33 +42,34 @@
               </ul>
 
               <!-- Muestro ultima nota -->
-              <%= n = e.notes.last %>
+              <% n = e.notes.last %>
               <% unless n.nil? %>
-                <li class="clearfix">
-                <h2><%= n.author.name %></h2>
-                <div class="time">hace <%= time_ago_in_words(n.created_at) %></div>
-                <p><%= n.text %></p>
-                <% if current_user_admin?
-                     link_to [n.milestone, n],
-                             method: :delete,
-                             data: { confirm: t('notes.delete.sure')},
-                             class: 'delete' do %>
-                        <span class="glyphicon glyphicon-remove"></span>
-                    <% end
-                       end
-                       if n.visibility=='every_body' %>
-                    <span class="glyphicon glyphicon-eye-open"></span>
-                <% else if n.visibility=='mentors' %>
-                        <span class="glyphicon glyphicon-eye-close"></span>
-                    <% else %>
-                        <span class="glyphicon glyphicon-lock"></span>
-                    <% end
-                end %>
-                </li>
+                  <h5>
+                    <%= n.author.name %>
+                    <div class="time">hace <%= time_ago_in_words(n.created_at) %></div>
+                  </h5>
+                  <h4><small><%= truncate(n.text, length: 350) %></small></h4>
+                  <% if current_user_admin?
+                       link_to [n.milestone, n],
+                               method: :delete,
+                               data: { confirm: t('notes.delete.sure')},
+                               class: 'delete' do %>
+                          <span class="glyphicon glyphicon-remove"></span>
+                      <% end
+                         end
+                         if n.visibility=='every_body' %>
+                      <span class="glyphicon glyphicon-eye-open"></span>
+                  <% else if n.visibility=='mentors' %>
+                          <span class="glyphicon glyphicon-eye-close"></span>
+                      <% else %>
+                          <span class="glyphicon glyphicon-lock"></span>
+                      <% end
+                         end %>
 
-                <div class="clearfix"></div>
-                </li>
+                  <div class="clearfix">
+                  </div>
               <% end %>
+            </li>
         <% end %>
       </ul>
     </div>
